--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Klassikaplus</string>
     <string name="novelty_error_no_date">Простите, но на данный момент сервис не доступен</string>
+    <string name="novelties">Новинки</string>
 </resources>
