--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="novelties">Новинки</string>
     <string name="item_name_template">Костюм с юбкой Szanel Czerwony</string>
     <string name="collection_is_updated">Коллекция обновлена</string>
+    <string name="refresh">Refresh</string>
 </resources>
