--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="category_selection">Выбор категории</string>
     <string name="about">О компании</string>
     <string name="catalog">Каталог</string>
+    <string name="company_title">Классика+</string>
 </resources>
