--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="about">О компании</string>
     <string name="catalog">Каталог</string>
     <string name="company_title">Классика+</string>
+    <string name="choose_category">Выберите категорию:</string>
+    <string name="ok">Ок</string>
+    <string name="cancel">Отмена</string>
 </resources>
