novelty error layout done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="novelties">Новинки</string>
     <string name="item_name_template">Костюм с юбкой Szanel Czerwony</string>
     <string name="collection_is_updated">Коллекция обновлена</string>
-    <string name="refresh">Refresh</string>
+    <string name="refresh">Обновить</string>
     <string name="category_selection">Выбор категории</string>
     <string name="about">О компании</string>
     <string name="catalog">Каталог</string>
